# MSTRD-Plugin

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  PresetManager.h
